--- a/css/popup.css
+++ b/css/popup.css
@@ -56,12 +56,13 @@ td.from-time{
 
 .favcoment{
 	margin: 10px 0;
+	position: relative;
 }
 
 .likelink{
 	text-decoration: none;
 	background-color: #ff6e16;
-	padding: 5px 10px;
+	padding: 7px 10px;
 	font-size: 1.3em;
 	color: black;
 	border-radius: 5px;
@@ -115,4 +116,14 @@ a.unlike:before { content:url('/img/heart_empty.png')" "; }
 
 #logout{
     text-align: right;
+}
+
+.sm{
+    display: inline-block;
+    height: 32px;
+    width: 32px;
+    background: url('/img/sm.png') no-repeat 0 0 white;
+    position: absolute;
+    top: -5px;
+    left: 100px;
 }
