--- a/css/popup.css
+++ b/css/popup.css
@@ -81,6 +81,7 @@ td.from-time{
 .favcoment{
 	margin: 10px 0;
 	position: relative;
+	text-align: center;
 }
 
 #followstatus{
@@ -97,9 +98,11 @@ td.from-time{
 	background-color: #ccc;
 	padding: 2px 5px;
 	margin-right: 4px;
+	margin-bottom: 5px;
 	font-size: 1.5em;
 	color: #000000 !important;
 	border-radius: 5px;
+	display: inline-block;
 }
 
 #outcoming_follow a{
@@ -126,10 +129,11 @@ a.unlike:before {
 	background-color: #255d80;
 	color: #ffffff;
     border-radius: 5px;
-	border: 2px solid #355D80
+	border: 2px solid #355D80;
+	width: 32%;
 }
 
-#welcome td span{
+#welcome td span.value{
 	display: block;
 	background-color: #8cb0e3;
 	border-top-left-radius: 5px;
